fixed some window spacing

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body{
     margin: 0;
     padding: 0;
+    width: 100vw;
+    min-height: 100vh;
     background-color: rgb(51, 49, 58);
-    width: 100%;
-    height: 100%;
-    font-family: var(--default-font);
     color: var(--default-color);
+    font-family: var(--default-font);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 :root{
     --default-font: 'Courier New', Courier, monospace;
@@ -57,6 +61,7 @@ header h1{
     display: grid;
     place-content: center;
     box-shadow: var(--default-shadow);
+    border: 1px solid black;
 }
 #colorPicker{
     width: 8rem;
@@ -81,4 +86,16 @@ header h1{
     border: 1px solid rgba(112, 112, 112, 0.192);
     background-color: transparent;
     user-select: none;
+}
+footer{
+    text-align: center;
+}
+footer a{
+    text-decoration: none;
+    color: var(--default-color);
+    font-weight: 600;
+}
+footer a:hover{
+    text-decoration: underline;
+    color: aqua;
 }
